--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.14.0",
-    "require": "^2.4.20",
+    "express-handlebars": "^3.0.0",
+    "puppeteer": "^0.12.0",
     "request": "^2.75.0",
-    "express-handlebars": "^3.0.0"
+    "require": "^2.4.20"
   },
   "devDependencies": {},
   "scripts": {
