--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,7 @@ test.js
 /public/china.json
 /public/se_asia.json
 /public/points.json
+/public/dreamstream.json
+/public/fake.json
 clientid.js
+test2.js
