Removed deprecated files and cleaned up extraneous code

--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "A Node.js web app that lists the highest MMR Dota streamers on twitch.tv",
   "main": "server.js",
   "dependencies": {
-    "body-parser": "^1.18.2",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
-    "mongoose": "^4.13.6",
     "puppeteer": "^0.12.0",
     "request": "^2.75.0",
     "require": "^2.4.20"
@@ -32,5 +30,6 @@
   "bugs": {
     "url": "https://github.com/pauljickling/Dream-Stream/issues"
   },
-  "homepage": "https://github.com/pauljickling/Dream-Stream#readme"
+  "homepage": "https://github.com/pauljickling/Dream-Stream#readme",
+  "false": {}
 }
