--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dreamstream",
   "version": "2.0.0",
-  "description": "A Node.js web app that lists the highest MMR Dota streamers on twitch.tv",
+  "description": "A Node.js web app that lists the highest ranked Dota streamers on twitch.tv",
   "main": "server.js",
   "dependencies": {
     "express": "^4.14.0",
