added test_twitch.json file to determine instances where algorithm is not producing correct results

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ test.js
 /public/points.json
 /public/dreamstream.json
 /public/fake.json
+/public/test_twitch.json
 clientid.js
 test2.js
 /public/cards.json
