--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "express-handlebars": "^3.0.0",
     "request": "^2.87.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "minimist": ">=1.2.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
