--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "handlebars": ">=4.7.7",
     "request": "^2.87.0"
   },
   "devDependencies": {
