--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^5.3.1",
     "handlebars": ">=4.7.7",
-    "request": "^2.87.0"
+    "request": "2.88.2"
   },
   "devDependencies": {
     "minimist": ">=1.2.6"
